opal-gwt-client/src/main/resources/org/obiba/opal/web/gwt/app/public/css/opal.css
/* Corner radius */
.ui-corner-tl { -moz-border-radius-topleft: 0.5em; -webkit-border-top-left-radius: 0.5em; }
.ui-corner-tr { -moz-border-radius-topright: 0.5em; -webkit-border-top-right-radius: 0.5em; }
.ui-corner-bl { -moz-border-radius-bottomleft: 0.5em; -webkit-border-bottom-left-radius: 0.5em; }
.ui-corner-br { -moz-border-radius-bottomright: 0.5em; -webkit-border-bottom-right-radius: 0.5em; }
.ui-corner-top { -moz-border-radius-topleft: 0.5em; -webkit-border-top-left-radius: 0.5em; -moz-border-radius-topright: 0.5em; -webkit-border-top-right-radius: 0.5em; }
.ui-corner-bottom { -moz-border-radius-bottomleft: 0.5em; -webkit-border-bottom-left-radius: 0.5em; -moz-border-radius-bottomright: 0.5em; -webkit-border-bottom-right-radius: 0.5em; }
.ui-corner-right {  -moz-border-radius-topright: 0.5em; -webkit-border-top-right-radius: 0.5em; -moz-border-radius-bottomright: 0.5em; -webkit-border-bottom-right-radius: 0.5em; }
.ui-corner-left { -moz-border-radius-topleft: 0.5em; -webkit-border-top-left-radius: 0.5em; -moz-border-radius-bottomleft: 0.5em; -webkit-border-bottom-left-radius: 0.5em; }
.ui-corner-all { -moz-border-radius: 0.5em; -webkit-border-radius: 0.5em; }

/* General */

body {
  text-align: left;
  background: url(image/background_tile.png) repeat;
  font-family: arial, verdana, sans-serif;
  font-size:12px;
  overflow: hidden;
  height: 100%;
}

a:hover {
	cursor: pointer;
	text-decoration:underline;
}

.right-aligned {
  float: right;
}

.left-aligned {
  float: left;
}

.small-indent {
	margin-left: 10px;
}

.indent {
	margin-left: 20px;
}

.large-indent {
	margin-left: 30px;
}

.loading {
	display: block;
	margin: auto;	
}

.title {
  font-size: 1.3em;
}

.gwt-MenuBar-horizontal .gwt-MenuItem {
	padding-top:3px;
	padding-bottom:5px;
}

.gwt-MenuBar-horizontal .gwt-MenuItemSeparator {
	background-color: transparent;
}

.gwt-MenuBar-vertical .gwt-MenuItem.gwt-MenuItem-selected {
	background-color: #feede0;
}

.gwt-TabLayoutPanel .gwt-TabLayoutPanelTab {
	background:none repeat scroll 0 0 #888888;
	color: #ffffff;
	font-weight:normal;
	-moz-border-radius-topleft: 0.5em; -webkit-border-top-left-radius: 0.5em; 
	-moz-border-radius-topright: 0.5em; -webkit-border-top-right-radius: 0.5em;
}

.gwt-TabLayoutPanel .gwt-TabLayoutPanelTab.gwt-TabLayoutPanelTab-selected {
	background:none repeat scroll 0 0 #C65F00;
	font-weight:normal;
}

.gwt-TabLayoutPanel .gwt-TabLayoutPanelContent {
	border-color:#BBBBBB;
	border-width:1px 0 0 1px;
}

.gwt-SplitLayoutPanel-HDragger {
	background-color: #B4A291;
}

.gwt-PopupPanel {
	border:5px solid #DDDDDD;
	-moz-border-radius: 0.5em; -webkit-border-radius: 0.5em;
}

.gwt-DialogBox .Caption {
	border-top:5px solid #DDDDDD;
}

/* CellTable */

.tableList .selected {
	background-color:#DEBB9D;
	color: #000000;
}

/* .GEO005SGB {
	background-color:#DEBB9D;
	color: #000000;
}

.GEO005SP {
	border-bottom:1px solid #6F7277;
	font-weight: normal;
}*/

/* Login */

.login {
	 position:absolute; 
	 top:50%; 
	 left:50%;	 
}

.login > table {
	 border: 3px solid #c65f00;
	 background-color: #ffffff;	 
	 -moz-border-radius: 0.5em; -webkit-border-radius: 0.5em;
	 padding: 1em;
	 position:absolute; 
	 top:-6em; 
	 left:-12.5em; 
	 width:30em; 
	 height:12em;
}

/* Notification */

.notification .title {
	font-weight: bold; 
	font-size:1.2em;
}

.notification .message {
	color: black; 
	font-style:italic;
}

/* Top */

.topbar {
	background-color: #c65f00;
}

.topbar a:hover {
	cursor: pointer;
}
    
.topbar a {
    margin-right: 10px;
    float: right;
    padding-top: 0.3em;
}

.topbar a, a:visited, a:hover {
	color:#ffffff;
}

.top .gwt-MenuBar table {
	border-spacing:10px 0;
}

.top .gwt-MenuBar-horizontal {
	background: transparent;
	border: 0px;
	margin-left:40px;
}

.top .gwt-MenuBar-horizontal .gwt-MenuItem {
	background-color: #888888;
	color: #cccccc;
	-moz-border-radius-bottomleft: 0.5em; -webkit-border-bottom-left-radius: 0.5em; 
	-moz-border-radius-bottomright: 0.5em; -webkit-border-bottom-right-radius: 0.5em;
}

.top .gwt-MenuBar-horizontal .gwt-MenuItem.selected {
	background-color: #c65f00;
	color: #ffffff;
}

.top .gwt-MenuBar-horizontal .gwt-MenuItem.gwt-MenuItem-selected {
	background-color: #d78f4e;
	color: #ffffff;
}

/* Content */

.main-content {
	background-color: #ffffff;
	margin:10px 50px;
	border:3px solid #C65F00;
}

/* Workbench */

.workbench .top {
    padding: 0.5em 0 0 1em;
    float: left;
    background:#D78F4E;
    border-bottom:1px solid #B4A291;
    color:#ffffff;
}

.workbench .top .header {
    float: left;
    margin-right:20px;
}

.workbench .top .header .title {
	font-size:1.2em;
	font-weight:bold;
}
  
.workbench .top .summary { 
    margin-top:0.25em;
}
    
.workbench .top .control {
    padding: 0.5em;
    float: left;
}
    
.workbench .top .control button {
    margin-left: 10px;
}

.workbench .main {
}

.workbench .main .title {
	font-weight: bold;
	font-size: 1em;
}

.workbench .main .p {
	padding: 10px;
}

.workbench .information .header {
	color:#444444;
	font-weight:bold;
	height: 2em;
	background:url("gwt/standard/images/hborder.png") repeat-x scroll 0 -2003px #E3E8F3;
	border-bottom:1px solid #B4A291;
}

.workbench .information .header .gwt-Label {
	padding-left:5px;
	padding-top:5px;
}

.workbench .information .header img {
  cursor:pointer;
  padding-top: 5px;
  margin-right: 5px;
}

.workbench .information .header .gwt-MenuItem {
  cursor:default;
  padding-top: 5px;
}

.workbench .information .content {
  margin: 5px;
}

.workbench .information .title {
  font-weight: bold;
  font-size: 1em;
}

/* Dashboard */

.dashboard {
  padding: 0.5em 0 0 1em;
}

.dashboard .gwt-Label.title {
  font-weight: normal;
}

.dashboard div {
  margin-top:10px;
}

.dashboard .gwt-Label {
  font-weight: bold;
  display: inline;
}

.dashboard .gwt-Label.count {
  font-weight: normal;
}

.dashboard #shortcuts a:hover {
  text-decoration: none;
}

.dashboard #shortcuts a img {
  margin-right: 10px;
}

.dashboard #shortcuts a {
  font-weight: bold;
  color: #000000;
}

/* Variable browser */

.gwt-Tree .magma-datasource .gwt-TreeItem {
	background:transparent url(image/16/bundle.png) no-repeat scroll left center;
	padding-left:20px;
}

.gwt-Tree .magma-table .gwt-TreeItem {
	background:transparent url(image/16/table.png) no-repeat scroll left center;
	padding-left:20px;
}

.gwt-Tree .magma-view .gwt-TreeItem {
	background:transparent url(image/16/view.png) no-repeat scroll left center;
	padding-left:20px;
}

/*.gwt-Tree .selected {
	background-color: #bb5500;	
}

.gwt-Tree .magma-datasource.selected div {
	background-color: #ffffff;	
}

.gwt-Tree .magma-datasource.selected div.gwt-TreeItem-selected {
	background-color: #bb5500;	
}*/

.gwt-Tree .gwt-TreeItem-selected {
	font-weight: bold;
	/*color: #ffffff;*/
}

.navigator .titlebar {
	background-color:#ECE5DE;
	color:#444444;
    padding-bottom:3px;
    padding-left:10px;
    padding-top:3px;
}

.navigator .titlebar div {
	display:inline;
}

.navigator .titlebar .title {
	font-weight:bold;
	font-size:1.2em;
}

.navigator  .toolbar {
  	background-color:#ECE5DE;
  	border-bottom:1px solid #B4A291;
  	padding-bottom:5px;
  	padding-left:10px;
  	margin-bottom:5px;
}

.navigator .toolbar-right img {
	margin-left: 5px;
    float: right;
}

.navigator  .toolbar-left img {
    margin-right: 5px;
    float: left;
}

.navigator  .toolbar img:hover {
    cursor: pointer;
}

.navigator .toolbar a:hover {
    cursor: pointer;
}

.navigator .gwt-MenuBar {
	background:transparent;
	border:0 none;
}

.navigator .gwt-MenuBar-horizontal .gwt-MenuItem {
	color:#666666;
	font-weight:bold;
	padding:0px;
	vertical-align:bottom;
}

.navigator .gwt-MenuBar-horizontal .gwt-MenuItemSeparator {
	padding-right:5px;
}

.navigator .gwt-MenuBar-horizontal .gwt-MenuItem-selected {
		
}

.navigator .gwt-MenuItem.tools {
	background:url("image/20/tools.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.add {
	background:url("image/20/add-item.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.edit {
	background:url("image/20/edit.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.next {
	background:url("image/20/next.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.next.disabled {
	background:url("image/20/next-disabled.png") no-repeat scroll left center transparent;
}

.navigator .gwt-MenuItem.previous {
	background:url("image/20/previous.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.previous.disabled {
	background:url("image/20/previous-disabled.png") no-repeat scroll left center transparent;
}

.navigator .gwt-MenuItem.parent {
	background:url("image/20/up.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.parent.disabled {
	background:url("image/20/up-disabled.png") no-repeat scroll left center transparent;
}

.gwt-MenuBar-vertical .gwt-MenuItem {
	color:#535353;
}

.navigator .tableList td:first-child  {
      text-decoration: underline;
    }
    .navigator .tableList td:first-child:hover {
      cursor: pointer;
    }
    .navigator .tableList .title-bold {
    	margin-top: 10px;
    	font-weight: bold;
    }

/* File Explorer Styles */ 
 
table.folder-details td:first-child span:hover {
  cursor: pointer;
}

.folder-details .folder {
	background:transparent url(image/16/folder.png) no-repeat scroll left center;
	padding-left:20px;
}

.folder-details .file {
	background:transparent url(image/16/document.png) no-repeat scroll left center;
	padding-left:20px;
}

.gwt-Tree .folder .gwt-TreeItem {
	background:transparent url(image/16/folder.png) no-repeat scroll left center;
	padding-left:20px;
}

.gwt-Tree .folder.expanded > table .gwt-TreeItem {
	background:transparent url(image/16/folder-visiting.png) no-repeat scroll left center;
	padding-left:20px;
}

/* Menu bar */ 

.gwt-MenuBar .gwt-MenuItem {
  cursor:pointer;
}


/* Import variables */ 

div.tableComparison-conflict {
	background:transparent url(image/20/error.png) no-repeat scroll left center;
	height:18px;
	width:150px;
}

div.tableComparison-creation {
	background:transparent url(image/20/list-add.png) no-repeat scroll left center;
	height:18px;
	width:150px;
}

div.tableComparison-modification {
	background:transparent url(image/20/edit.png) no-repeat scroll left center;
	height:18px;
	width:150px;
}

div.variableChanges {
  height:100%;
}

table.variableChangesDetails {
  width:100%;
  table-layout:fixed;
}

table.variableChangesDetailsVert table.variableChangesDetails tr > td  {
  text-align:left; 
}

div.variableChangesPager tr > td {
  text-align:right;
  white-space:nowrap;
  width:100%;
}

div.ignoreAllModifications {
  padding:10px 10px 2px;
}

div.ignoreAllModifications > span > label {
  padding-left:10px;
  font-weight:bold;
}

div.variableChangesSummaryPanel > div {
  font-weight:bold;
  margin:5px;
}

div.variableChanges {
  margin:10px;
  height:550px;
}

div.gwt-TabLayoutPanel.tableChangesPanel div.gwt-TabLayoutPanelTabs {
  width:100% !important;
}

div.variableChangesSummaryPanel > div > em {
  font-style:normal; 
  margin:5px;
  color:red;
}

